# CLIprecog

./: .gitignore  .lintstagedrc.mjs  .typos.toml  Cargo.toml  LICENSE.MIT  MIGRATION_ANALYSIS.md  NOTICE  README.md  TODO.md  agents.md  deny.toml  feed.json  package.json  pnpm-lock.yaml  turbo.json
.amazonq/cli-todo-lists/: 1761593302615.json  1761664085729.json  1761667777935.json  1761839203617.json
.github/workflows/: check-merge-conflicts.yml  npm-publish.yml  rust.yml  typescript.yml  typos.yml
build-config/: buildspec-linux-minimal.yml  buildspec-linux-ubuntu.yml  buildspec-linux.yml  buildspec-macos_aarch64.yml
build-scripts/: build-macos.sh  build.py  chat_main.py  const.py  manifest.py  qchatbuild.py
bundle/deb/: control  control_minimal  postrm
bundle/dmg/: VolumeIcon.icns
bundle/linux/: install.sh
crates/alacritty_terminal/: Cargo.toml
crates/amzn-codewhisperer-client/: Cargo.toml
crates/amzn-codewhisperer-streaming-client/: Cargo.toml
crates/amzn-consolas-client/: Cargo.toml
crates/amzn-qdeveloper-streaming-client/: Cargo.toml
crates/amzn-toolkit-telemetry-client/: Cargo.toml
crates/aws-toolkit-telemetry-definitions/: Cargo.toml  def.json
crates/chat-cli/: Cargo.toml  build.rs  telemetry_definitions.json
crates/fig_install/: Cargo.toml
crates/fig_install/src/: common.rs  index.rs  lib.rs  linux.rs  macos.rs  migrate.rs
crates/fig_install/test_files/: test-index.json
ops-scripts/: create-signing-cert.sh  reinstall.sh
proto/: fig.proto  local.proto  package.json  tsconfig.json
scripts/: install.sh  setup.sh
(+217 files in other folders)
