[package]
name = "fig_install"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []

[dependencies]
bitflags.workspace = true
cfg-if.workspace = true
fig_integrations.workspace = true
fig_os_shim.workspace = true
fig_settings.workspace = true
fig_util.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
dbus = { path = "../dbus" }

[dev-dependencies]
fig_test_utils.workspace = true
tracing-subscriber.workspace = true
